--- a/app.css
+++ b/app.css
@@ -30,3 +30,76 @@
 }
 
 .angular-google-map-container { height: 400px; }
+
+#chatBox {
+  overflow : auto;
+  width : 100%;
+  height : 300px;
+  border: 1px solid;
+  padding: 10px 10px 10px 10px;
+}
+.chatMessage {
+  padding: 2px 40px;
+  background: #ffffff;
+  border-radius: 25px;
+  text-align: left;
+  margin-bottom: 8px;
+}
+
+.bubble{
+  background-color: #F2F2F2;
+  border-radius: 5px;
+  box-shadow: 0 0 6px #B2B2B2;
+  display: inline-block;
+  padding: 10px 18px;
+  position: relative;
+  vertical-align: top;
+}
+
+.bubble::before {
+  background-color: #F2F2F2;
+  content: "\00a0";
+  display: block;
+  height: 16px;
+  position: absolute;
+  top: 11px;
+  transform:             rotate( 29deg ) skew( -35deg );
+  -moz-transform:    rotate( 29deg ) skew( -35deg );
+  -ms-transform:     rotate( 29deg ) skew( -35deg );
+  -o-transform:      rotate( 29deg ) skew( -35deg );
+  -webkit-transform: rotate( 29deg ) skew( -35deg );
+  width:  20px;
+}
+
+.carmen {
+  background-color: rgb(160, 231, 239) ;
+  float: left;
+  margin: 5px 45px 5px 20px;
+}
+
+.carmen::before {
+  background-color: rgb(160, 231, 239) ;
+  box-shadow: -2px 2px 2px 0 rgba( 178, 178, 178, .4 );
+  left: -9px;
+}
+
+.human {
+  background-color: rgb(169, 239, 160) ;
+  float: right;
+  margin: 5px 20px 5px 45px;
+}
+
+.human::before {
+  background-color: rgb(169, 239, 160) ;
+  box-shadow: 2px -2px 2px 0 rgba( 178, 178, 178, .4 );
+  right: -9px;
+}
+
+.imgCarmen{
+  clear: both;
+  background-image: url("imgs/carmen.png");
+  width: 50px;
+  height: 48px;
+  float: left;
+  background-size: 50px 48px;
+}
